--- a/index.html
+++ b/index.html
@@ -24,10 +24,7 @@
     <style>
     </style>
 
-    <script src="./index.js">
-
-
-    </script>
+    <script src="./index.js"></script>
 </body>
 
 </html>
